--- a/index.html
+++ b/index.html
@@ -1,104 +1,55 @@
-// voli.js - Μετατροπή της προσομοίωσης από Java σε JavaScript
-
-// Ορισμός των βασικών σταθερών
-const G = 6.67430e-11; // Παγκόσμια σταθερά βαρύτητας
-const M_earth = 5.972e24; // Μάζα της Γης σε kg
-const R = 6371000; // Ακτίνα της Γης σε m
-
-// Μεταβλητές προσομοίωσης (ρυθμιζόμενες από sliders)
-let h = 500000; // Αρχικό ύψος πάνω από την επιφάνεια της Γης (m)
-let v0 = 0; // Αρχική ταχύτητα (m/s)
-let dt = 0.1; // Βήμα χρόνου (s)
-let massMultiplier = 1; // Πολλαπλάσιο της μάζας της Γης
-
-// Κατάσταση του μήλου
-let y = R + h; // Θέση του μήλου (m)
-let v = v0; // Ταχύτητα (m/s)
-
-// Ρύθμιση του καμβά
-const canvas = document.getElementById('simulationCanvas');
-const ctx = canvas.getContext('2d');
-
-// Φόρτωση εικόνων
-const appleImg = new Image();
-appleImg.src = 'apple.gif';
-const earthImg = new Image();
-earthImg.src = 'gh.png';
-const backgroundImg = new Image();
-backgroundImg.src = 'univ.gif';
-
-// Συνάρτηση για υπολογισμό της βαρυτικής επιτάχυνσης
-function getGravity(y) {
-    let M = massMultiplier * M_earth;
-    return (G * M) / (y * y);
-}
-
-// Βρόχος ενημέρωσης
-function update() {
-    let g = getGravity(y);
-    v -= g * dt; // Ενημέρωση ταχύτητας
-    y += v * dt; // Ενημέρωση θέσης
-
-    if (y <= R) {
-        y = R;
-        v = 0; // Σταματάμε τη βολή
-    }
-}
-
-// Σχεδίαση της προσομοίωσης
-function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    ctx.drawImage(backgroundImg, 0, 0, canvas.width, canvas.height);
-    ctx.drawImage(earthImg, canvas.width / 2 - 50, canvas.height - 100, 100, 100);
-    let appleY = canvas.height - ((y - R) / 5000); // Βελτιωμένη κλίμακα σχεδίασης
-    ctx.drawImage(appleImg, canvas.width / 2 - 15, appleY, 30, 30);
-
-    // Εμφάνιση αριθμητικών δεδομένων με πλαίσιο
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.7)';
-    ctx.fillRect(10, 10, 220, 80);
-    ctx.fillStyle = 'white';
-    ctx.font = '16px Arial';
-    ctx.fillText(`Ύψος: ${(y - R).toFixed(2)} m`, 20, 30);
-    ctx.fillText(`Ταχύτητα: ${v.toFixed(2)} m/s`, 20, 50);
-    ctx.fillText(`Βαρύτητα: ${getGravity(y).toFixed(5)} m/s²`, 20, 70);
-}
-
-// Εκτέλεση της προσομοίωσης
-function simulate() {
-    update();
-    draw();
-    requestAnimationFrame(simulate);
-}
-
-// Σύνδεση sliders
-const heightSlider = document.getElementById('heightSlider');
-const speedSlider = document.getElementById('speedSlider');
-const timeStepSlider = document.getElementById('timeStepSlider');
-const massSlider = document.getElementById('massSlider');
-
-heightSlider.addEventListener('input', (e) => {
-    h = parseFloat(e.target.value);
-    y = R + h;
-});
-
-speedSlider.addEventListener('input', (e) => {
-    v0 = parseFloat(e.target.value);
-    v = v0;
-});
-
-timeStepSlider.addEventListener('input', (e) => {
-    dt = parseFloat(e.target.value);
-});
-
-massSlider.addEventListener('input', (e) => {
-    massMultiplier = parseFloat(e.target.value);
-});
-
-// Εκκίνηση της προσομοίωσης όταν φορτωθούν οι εικόνες
-backgroundImg.onload = () => {
-    earthImg.onload = () => {
-        appleImg.onload = () => {
-            simulate();
-        };
-    };
-};
+<!DOCTYPE html>
+<html lang="el">
+<head>
+    <meta charset="UTF-8">
+    <title>Προσομοίωση Βαρύτητας</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #f7f7f7;
+        }
+        canvas {
+            border: 1px solid black;
+            background: url('univ.gif') no-repeat center center;
+            background-size: cover;
+        }
+        .controls {
+            margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .control-group {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Προσομοίωση Βαρύτητας</h1>
+    <canvas id="simulationCanvas" width="800" height="600"></canvas>
+    <div class="controls">
+        <div class="control-group">
+            <label for="heightSlider">Ύψος:</label>
+            <input type="range" id="heightSlider" min="0" max="1000000" step="10000" value="500000">
+            <span id="heightValue">500000</span> m
+        </div>
+        <div class="control-group">
+            <label for="speedSlider">Ταχύτητα:</label>
+            <input type="range" id="speedSlider" min="0" max="10000" step="100" value="0">
+            <span id="speedValue">0</span> m/s
+        </div>
+        <div class="control-group">
+            <label for="timeStepSlider">Βήμα Χρόνου:</label>
+            <input type="range" id="timeStepSlider" min="0.01" max="1" step="0.01" value="0.1">
+            <span id="timeStepValue">0.1</span> s
+        </div>
+        <div class="control-group">
+            <label for="massSlider">Μάζα Πλανήτη (xΓη):</label>
+            <input type="range" id="massSlider" min="0.1" max="10" step="0.1" value="1">
+            <span id="massValue">1</span> xΓη
+        </div>
+    </div>
+    <script src="voli.js"></script>
+</body>
+</html>
