--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       white-space: pre;
       pointer-events: none;
     }
-    /* Το overlay των presets τοποθετείται πιο ψηλά */
+    /* Overlay presets */
     #presetsOverlay {
       position: absolute;
       bottom: 100px;
@@ -69,6 +69,7 @@
       font-size: 12px;
       cursor: pointer;
     }
+    /* Overlay sliders */
     #slidersOverlay {
       position: absolute;
       bottom: 10px;
@@ -96,6 +97,7 @@
       height: 20px;
       font-size: 12px;
     }
+    /* Overlay κουμπιών */
     #buttonOverlay {
       position: absolute;
       top: 10px;
@@ -103,33 +105,44 @@
       display: flex;
       gap: 5px;
     }
+    /* Στυλ για το κουμπί εκκίνησης/παύσης */
+    #startButton {
+      background-color: green;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    /* Όταν τρέχει η προσομοίωση το κουμπί γίνεται κόκκινο */
+    #startButton.running {
+      background-color: red;
+    }
     #buttonOverlay button {
       padding: 5px 10px;
       font-size: 14px;
       cursor: pointer;
     }
-    /* Overlay για το μήνυμα (με το Newton) */
+    /* Overlay μηνύματος (με τον Newton) */
     #messageOverlay {
       position: absolute;
       top: 50%;
-      left: 70%;  /* εμφανίζεται προς τα δεξιά */
+      left: 70%;
       transform: translate(-50%, -50%);
       background: rgba(0,0,0,0.7);
       color: white;
       padding: 20px;
       border-radius: 10px;
-      font-size: 18px;  /* μικρότερη γραμματοσειρά */
+      font-size: 18px;
       display: none;
       align-items: center;
       gap: 10px;
     }
     #messageOverlay img {
-      max-width: 50px;  /* μικρότερη εικόνα */
+      max-width: 50px;
       height: auto;
     }
   </style>
-  <!-- Αν έχεις favicon, πρόσθεσε το link εδώ -->
-  <!-- <link rel="icon" href="path/to/favicon.ico" type="image/x-icon"> -->
 </head>
 <body>
   <div id="canvasContainer">
@@ -147,7 +160,6 @@
           <span id="radiusLabel">Ακτίνα (km):</span>
           <span id="radiusValueSlider">6371,000</span>
         </label>
-        <!-- Αρχική τιμή 6371 km -->
         <input type="range" id="radiusSlider" min="1" max="10000" step="1" value="6371">
         <input type="number" id="radiusNumber" min="1" max="10000" step="1" value="6371">
       </div>
@@ -189,64 +201,48 @@
       <button id="resetButton">Reset</button>
       <button id="langToggle">EN</button>
     </div>
-    <!-- Overlay για εμφάνιση μηνύματος -->
     <div id="messageOverlay"></div>
   </div>
   
   <script>
-    // Default translations fallback
-    const defaultTranslations = {
-      "title": { "el": "Τα μήλα του Νεύτωνα", "en": "Newton's Apples" },
-      "buttons": {
-        "startStop": { "el": "Έναρξη/Στοπ", "en": "Start/Stop" },
-        "reset": { "el": "Reset", "en": "Reset" },
-        "langToggle": { "el": "EN", "en": "GR" },
-        "presets": {
-          "earth": { "el": "Πλανήτης Γη", "en": "Earth" },
-          "cosmic1": { "el": "1η Κοσμική", "en": "Cosmic 1" },
-          "cosmic2": { "el": "2η Κοσμική", "en": "Cosmic 2" }
-        }
-      },
-      "labels": {
-        "radius": { "el": "Ακτίνα (km):", "en": "Radius (km):" },
-        "height": { "el": "Ύψος εκτόξευσης (km):", "en": "Launch Height (km):" },
-        "speed": { "el": "Ταχύτητα (km/s):", "en": "Speed (km/s):" },
-        "timeStep": { "el": "Βήμα χρόνου (s):", "en": "Time Step (s):" },
-        "mass": { "el": "Μάζα (xΓη):", "en": "Mass (x Earth):" }
-      },
-      "dataOverlay": {
-        "time": { "el": "Χρόνος:", "en": "Time:" },
-        "height": { "el": "Ύψος:", "en": "Height:" },
-        "speed": { "el": "Ταχύτητα:", "en": "Speed:" },
-        "gravity": { "el": "Βαρύτητα:", "en": "Gravity:" }
-      }
-    };
-
-    let currentLang = "el";
-    let translations = defaultTranslations;
-
-    // Φόρτωση αρχείου μεταφράσεων (αν υπάρχει)
+    // Φόρτωση του αρχείου μεταφράσεων
+    let translations;
     fetch('translations.json')
       .then(response => response.json())
-      .then(data => { translations = data; updateLanguage(); })
-      .catch(error => { console.error('Error loading translations:', error); translations = defaultTranslations; updateLanguage(); });
+      .then(data => {
+        translations = data;
+        updateLanguage();
+      })
+      .catch(error => {
+        console.error('Error loading translations:', error);
+      });
 
     function updateLanguage() {
-      if (!translations || !translations.title) return;
       document.getElementById('titleOverlay').innerText = translations.title[currentLang];
       document.getElementById('presetEarth').innerText = translations.buttons.presets.earth[currentLang];
       document.getElementById('presetCosmic1').innerText = translations.buttons.presets.cosmic1[currentLang];
       document.getElementById('presetCosmic2').innerText = translations.buttons.presets.cosmic2[currentLang];
-      document.getElementById('startButton').innerText = translations.buttons.startStop[currentLang];
       document.getElementById('resetButton').innerText = translations.buttons.reset[currentLang];
       document.getElementById('langToggle').innerText = translations.buttons.langToggle[currentLang];
-      // Ενημέρωση μόνο του μεταφράσιμου κειμένου των ετικετών
       document.getElementById('radiusLabel').innerText = translations.labels.radius[currentLang];
       document.getElementById('heightLabel').innerText = translations.labels.height[currentLang];
       document.getElementById('speedLabel').innerText = translations.labels.speed[currentLang];
       document.getElementById('timeStepLabel').innerText = translations.labels.timeStep[currentLang];
       document.getElementById('massLabel').innerText = translations.labels.mass[currentLang];
+      updateStartButtonText();
       updateOverlay();
+    }
+
+    let currentLang = "el";
+
+    // Ενημέρωση του κουμπιού εκκίνησης/παύσης βάσει του translations.buttons.startStop
+    function updateStartButtonText() {
+      const startButton = document.getElementById('startButton');
+      const parts = translations.buttons.startStop[currentLang].split('/');
+      const startText = parts[0].trim();
+      const stopText = parts.length > 1 ? parts[1].trim() : startText;
+      startButton.textContent = running ? stopText : startText;
+      startButton.style.backgroundColor = running ? 'red' : 'green';
     }
 
     document.getElementById('langToggle').addEventListener('click', () => {
@@ -254,10 +250,9 @@
       updateLanguage();
     });
 
-    // Για πιο ρεαλιστικά αποτελέσματα, χρησιμοποιούμε τις τυπικές τιμές της Γης:
-    // R_γης = 6371 km (6371000 m) και M_γης = 5.972e24 kg
+    // Σταθερές και αρχικές τιμές προσομοίωσης
     const M_earth = 5.972e24;
-    let planetRadius = 6371000; // m
+    let planetRadius = 6371000;
     let h = 0;
     let v0 = 0;
     let dt = 0.1;
@@ -266,9 +261,8 @@
     let simTime = 0;
 
     const G = 6.67430e-11;
-
     const earthCenterX = 400;
-    const earthCenterY = 300 - 120;
+    const earthCenterY = 180;
 
     let initialScale = planetRadius / 100;
     let scale = initialScale;
@@ -291,10 +285,8 @@
     const backgroundImg = new Image();
     backgroundImg.src = 'univ.gif';
 
-    // Υποθέτουμε ότι υπάρχει εικόνα του Νεύτωνα με όνομα "newton.png"
     const newtonImgSrc = 'newton.png';
 
-    // Μεταβλητή για έλεγχο αλλαγής πρόσημου του x
     let previousSignX = null;
 
     function updatePlanetImage() {
@@ -338,7 +330,6 @@
         translations.dataOverlay.gravity[currentLang] + " " + formatNumber(gVal, 3) + " m/s²";
     }
 
-    // Λειτουργία εμφάνισης μηνύματος με το Newton
     function showMessage(message) {
       const messageOverlay = document.getElementById('messageOverlay');
       messageOverlay.innerHTML = `<div>${message}</div><img src="${newtonImgSrc}" alt="Newton">`;
@@ -360,23 +351,22 @@
     }
 
     function getGravity() {
-      // Υπολογισμός g στην επιφάνεια: G*M_γης/(R_γης)^2
       let r = Math.sqrt(x * x + y * y);
       return (G * (massMultiplier * M_earth)) / (r * r);
     }
 
+    // Σταματάει αυτόματα η προσομοίωση όταν αλλάζει το πρόσημο του x
     function updateSimulation() {
       let r = Math.sqrt(x * x + y * y);
-      
-      // Έλεγχος αλλαγής πρόσημου του x
+
       if (previousSignX !== null && Math.sign(x) !== previousSignX) {
         running = false;
-        document.getElementById('startButton').textContent = translations.buttons.startStop[currentLang];
-        showMessage("Η προσομοίωση σταμάτησε λόγω αλλαγής πρόσημου του x.");
+        updateStartButtonText();
+        showMessage(translations.messages.pause[currentLang]);
         return;
       }
       previousSignX = Math.sign(x) || 1;
-      
+
       let ax = - (G * (massMultiplier * M_earth)) * (x / (r * r * r));
       let ay = - (G * (massMultiplier * M_earth)) * (y / (r * r * r));
       vx += ax * dt;
@@ -385,36 +375,35 @@
       y += vy * dt;
       simTime += dt;
 
-      // Έλεγχος πτώσης: αν το μήλο φτάνει στη Γη
       if (r < planetRadius) {
         running = false;
+        updateStartButtonText();
         let msg = (earthImg.src.indexOf("gh.png") !== -1)
-                  ? "Το μήλο έπεσε πάνω στη Γη"
-                  : "Το μήλο έπεσε πάνω στον πλανήτη";
+                  ? translations.messages.appleFellEarth[currentLang]
+                  : translations.messages.appleFellOther[currentLang];
         showMessage(msg);
         return;
       }
 
-      // Έλεγχος διαφυγής: αν η ταχύτητα είναι ίση ή μεγαλύτερη από την ταχύτητα διαφυγής
       let currentSpeed = Math.sqrt(vx * vx + vy * vy);
       let escapeV = Math.sqrt(2 * G * (massMultiplier * M_earth) / planetRadius);
       if (currentSpeed >= escapeV) {
         running = false;
-        showMessage("Το μήλο διέφυγε");
+        updateStartButtonText();
+        showMessage(translations.messages.appleEscaped[currentLang]);
         return;
       }
 
-      // Έλεγχος zoom: αν το μήλο βγει εκτός του canvas, αυξάνουμε το scale
       let pos = simToCanvas(x, y);
       if (pos.canvasX < 0 || pos.canvasX > canvas.width ||
           pos.canvasY < 0 || pos.canvasY > canvas.height) {
         scale *= 1.05;
       }
 
-      // Έλεγχος εάν έχει συμπληρωθεί ο μέγιστος αριθμός σημείων στην τροχιά
       if (trajectory.length >= 10000) {
         running = false;
-        showMessage("Το μήλο διέφυγε");
+        updateStartButtonText();
+        showMessage(translations.messages.appleEscaped[currentLang]);
         return;
       } else {
         trajectory.push({ simX: x, simY: y });
@@ -449,19 +438,17 @@
       requestAnimationFrame(simulate);
     }
 
-    const startButton = document.getElementById('startButton');
-    startButton.addEventListener('click', () => {
+    document.getElementById('startButton').addEventListener('click', () => {
       hideMessage();
       running = !running;
-      startButton.textContent = translations.buttons.startStop[currentLang];
+      updateStartButtonText();
       if (running) {
         previousSignX = Math.sign(x) || 1;
         simulate();
       }
     });
 
-    const resetButton = document.getElementById('resetButton');
-    resetButton.addEventListener('click', () => {
+    document.getElementById('resetButton').addEventListener('click', () => {
       hideMessage();
       running = false;
       simTime = 0;
@@ -477,34 +464,28 @@
       initialScale = planetRadius / 100;
       scale = initialScale;
       trajectory = [];
-      startButton.textContent = translations.buttons.startStop[currentLang];
+      updateStartButtonText();
       drawInitialState();
       updateOverlay();
     });
 
-    // Preset "Πλανήτης Γη"
     document.getElementById('presetEarth').addEventListener('click', () => {
       hideMessage();
-      // Χρησιμοποιούμε την τυπική τιμή για τη Γη: 6371 km
-      radiusSlider.value = 6371;
-      radiusNumber.value = 6371;
+      document.getElementById('radiusSlider').value = 6371;
+      document.getElementById('radiusNumber').value = 6371;
       planetRadius = 6371 * 1000;
       document.getElementById('radiusValueSlider').innerText = formatNumber(6371, 3);
-
-      heightSlider.value = 0;
-      heightNumber.value = 0;
+      document.getElementById('heightSlider').value = 0;
+      document.getElementById('heightNumber').value = 0;
       h = 0;
       document.getElementById('heightValueSlider').innerText = formatNumber(0, 3);
-
-      speedSlider.value = 0;
-      speedNumber.value = 0;
+      document.getElementById('speedSlider').value = 0;
+      document.getElementById('speedNumber').value = 0;
       v0 = 0;
       document.getElementById('speedValueSlider').innerText = formatNumber(0, 3);
-
-      massSlider.value = 1;
-      massNumber.value = 1;
+      document.getElementById('massSlider').value = 1;
+      document.getElementById('massNumber').value = 1;
       massMultiplier = 1;
-
       updatePlanetImage();
       if (!running) {
          initialScale = planetRadius / 100;
@@ -518,14 +499,13 @@
       updateOverlay();
     });
 
-    // Preset "1η Κοσμική": υπολογισμός κυκλικής ταχύτητας δυναμικά
     document.getElementById('presetCosmic1').addEventListener('click', () => {
       hideMessage();
       let r0 = planetRadius + h;
       let v_circ = Math.sqrt(G * (massMultiplier * M_earth) / r0);
       let v_circ_km = v_circ / 1000;
-      speedSlider.value = v_circ_km;
-      speedNumber.value = v_circ_km;
+      document.getElementById('speedSlider').value = v_circ_km;
+      document.getElementById('speedNumber').value = v_circ_km;
       v0 = v_circ;
       updatePlanetImage();
       if (!running) {
@@ -540,15 +520,14 @@
       updateOverlay();
     });
 
-    // Preset "2η Κοσμική": υπολογισμός ταχύτητας διαφυγής δυναμικά
     document.getElementById('presetCosmic2').addEventListener('click', () => {
       hideMessage();
       let r0 = planetRadius + h;
       let v_circ = Math.sqrt(G * (massMultiplier * M_earth) / r0);
       let v_escape = Math.sqrt(2) * v_circ;
       let v_escape_km = v_escape / 1000;
-      speedSlider.value = v_escape_km;
-      speedNumber.value = v_escape_km;
+      document.getElementById('speedSlider').value = v_escape_km;
+      document.getElementById('speedNumber').value = v_escape_km;
       v0 = v_escape;
       updatePlanetImage();
       if (!running) {
@@ -563,7 +542,6 @@
       updateOverlay();
     });
 
-    // Σύνδεση slider για ακτίνα πλανήτη
     const radiusSlider = document.getElementById('radiusSlider');
     const radiusNumber = document.getElementById('radiusNumber');
     radiusSlider.addEventListener('input', (e) => {
