--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       background-size: cover;
       display: block;
     }
+    /* Τίτλος overlay με εικόνα Νεύτωνα */
     #titleOverlay {
       position: absolute;
       top: 10px;
@@ -40,6 +41,13 @@
       border-radius: 5px;
       font-size: 20px;
       pointer-events: none;
+    }
+    /* Στυλ για την εικόνα του Νεύτωνα δίπλα στον τίτλο */
+    #newtonIcon {
+      vertical-align: middle;
+      width: 30px;
+      height: auto;
+      margin-right: 8px;
     }
     #dataOverlay {
       position: absolute;
@@ -123,7 +131,7 @@
       font-size: 14px;
       cursor: pointer;
     }
-    /* Overlay μηνύματος (με τον Newton) - μικρότερη γραμματοσειρά και μια γραμμή */
+    /* Overlay μηνύματος (με τον Newton) - μικρότερη γραμματοσειρά και μία γραμμή */
     #messageOverlay {
       position: absolute;
       top: 50%;
@@ -133,14 +141,14 @@
       color: white;
       padding: 10px;
       border-radius: 10px;
-      font-size: 12px; /* μικρότερη γραμματοσειρά */
+      font-size: 12px;
       display: none;
       align-items: center;
       gap: 5px;
-      white-space: nowrap; /* εμφάνιση σε μία γραμμή */
+      white-space: nowrap;
     }
     #messageOverlay img {
-      max-width: 30px; /* μικρότερη εικόνα */
+      max-width: 30px;
       height: auto;
     }
   </style>
@@ -148,7 +156,11 @@
 <body>
   <div id="canvasContainer">
     <canvas id="simulationCanvas" width="800" height="600"></canvas>
-    <div id="titleOverlay">Τα μήλα του Νεύτωνα</div>
+    <!-- Εισαγωγή εικόνας του Νεύτωνα δίπλα στον τίτλο -->
+    <div id="titleOverlay">
+      <img id="newtonIcon" src="newton.png" alt="Newton Icon">
+      Τα μήλα του Νεύτωνα
+    </div>
     <div id="dataOverlay"></div>
     <div id="presetsOverlay">
       <button id="presetEarth">Πλανήτης Γη</button>
@@ -221,7 +233,9 @@
     let currentLang = "el";
 
     function updateLanguage() {
-      document.getElementById('titleOverlay').innerText = translations.title[currentLang];
+      document.getElementById('titleOverlay').innerText = "";
+      // Εισάγουμε ξανά την εικόνα του Νεύτωνα πριν το κείμενο
+      document.getElementById('titleOverlay').innerHTML = '<img id="newtonIcon" src="newton.png" alt="Newton Icon"> ' + translations.title[currentLang];
       document.getElementById('presetEarth').innerText = translations.buttons.presets.earth[currentLang];
       document.getElementById('presetCosmic1').innerText = translations.buttons.presets.cosmic1[currentLang];
       document.getElementById('presetCosmic2').innerText = translations.buttons.presets.cosmic2[currentLang];
@@ -366,7 +380,7 @@
         showMessage(translations.messages.pause[currentLang]);
         return;
       }
-      previousSignX = Math.sign(x); // Χωρίς fallback σε 1
+      previousSignX = Math.sign(x);
 
       let ax = - (G * (massMultiplier * M_earth)) * (x / (r * r * r));
       let ay = - (G * (massMultiplier * M_earth)) * (y / (r * r * r));
